Finished creating users, and orders and redirecting into user portal. Next is webhook reconciliation.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FreeTrial</title>
+    <title>Free Trial Demos</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <%= javascript_include_tag src="https://d1f8f9xcsvx3ha.cloudfront.net/sbl/0.8.0/fastspring-builder.min.js", id: "fsc-api", type: "text/javascript", data: { storefront: "banahogg.test.onfastspring.com/popup-test", 'popup-webhook-received' => "popupWebhookReceived", "popup-closed" => "popupClose", "continuous" => "true" } %>
   </head>
 
   <body>
+
     <%= yield %>
+
   </body>
 </html>
