Changing order to charge.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 
   <div class="content-cont">
 
-  <button onclick="fsAccountRedirect()">
+  <button class="paymentNeeded" onclick="fsAccountRedirect()">
     Update Your Payment Method
   </button>
 
