--- a/app/assets/stylesheets/api/v1/fastspring.scss
+++ b/app/assets/stylesheets/api/v1/fastspring.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the users controller here.
+// Place all the styles related to the api/v1/fastspring controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.paymentNeeded {
-  background-color: #E75654;
-}
