Flows completed for demo purposes. No error handling or guardrails though.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
-    <%= javascript_include_tag src="https://d1f8f9xcsvx3ha.cloudfront.net/sbl/0.8.0/fastspring-builder.min.js", id: "fsc-api", type: "text/javascript", data: { storefront: "banahogg.test.onfastspring.com/popup-test", 'popup-webhook-received' => "popupWebhookReceived", "popup-closed" => "popupClose", "continuous" => "true" } %>
+    <%= javascript_include_tag src="https://d1f8f9xcsvx3ha.cloudfront.net/sbl/0.8.3/fastspring-builder.min.js", id: "fsc-api", type: "text/javascript", data: { storefront: "ttest.test.onfastspring.com/popup-ttest", 'popup-webhook-received' => "popupWebhookReceived", "popup-closed" => "popupClose", "access-key" => "XU-Z_VHERA2HEAOKWJDYNG" } %>
   </head>
 
   <body>
