--- a/app/views/pages/freemium.html.erb
+++ b/app/views/pages/freemium.html.erb
@@ -1,1 +1,9 @@
-<h1>Freemium</h1>
+<div class="outer-cont">
+
+  <div class="content-cont">
+
+    <%= button_to 'Create Your FastSpring Account', new_user_path, method: 'get', class: "freemium-acct" %>
+
+  </div>
+
+</div>
